--- a/.travis.yaml
+++ b/.travis.yaml
@@ -3,6 +3,7 @@ sudo: require
 services:
   - docker
 before_install:
+  - openssl aes-256-cbc -K $encrypted_9f3b5599b056_key -iv $encrypted_9f3b5599b056_iv -in service-account.json.enc -out service-account.json -d
   - curl https://sdk.cloud.google.com | bash >  /dev/null;
   - source $HOME/google-cloud-sdk/path.bash.inc
   - gcloud components update kubectl 
@@ -22,7 +23,10 @@ before_install:
 #    -- docker run -it -v %cd%:/app ruby:2.4 sh
 #    -- gem install travis
 #    -- travis login (travis login --github-token YOUR_PERSONAL_TOKEN --com)
-#    -- encrypt the service account key (travis encrypt-file service-account.json -r )
+#    -- encrypt the service account key (travis encrypt-file service-account.json -r amoat7/multi-container --com)
+#    -- add openssl file to .travis.yml file 
+#    -- remove service-account.json file 
+#    -- 
 
 # - login to docker cli
 # - 'run test'
